Fixing some layout bugs

--- a/index.css
+++ b/index.css
@@ -9,7 +9,6 @@ body {
     padding:0;
     font-family: "Nunito Sans", sans-serif;
     background-color: var(--bg_body);
-    /* color: var(--body-text); */
 }
 
 .header {
@@ -34,7 +33,7 @@ body {
 .button {
     padding: 10px 15px;
     font-size: 1rem;
-    border: 1px solid black;
+    border: 2px solid var(--lines-color);
     border-radius: 10px;
     color: black;
     background-color: var(--bg_default);
@@ -45,8 +44,8 @@ body {
 }
 
 .icon {
-    width: 0.8rem;
-    height: 0.8rem;
+    width: 1.2rem;
+    height: 1.2rem;
 }
 
 .intro {
@@ -64,12 +63,10 @@ body {
 
 .intro h1 {
     color : var(--brand-secondary);
-    /* text-align: center; */
     font-weight:700;
 }
 
 .intro p {
-    /* text-align: center; */
     font-weight: 300;
 }
 
@@ -81,7 +78,7 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 0px 20px;
+    gap: 10px;
     background-color: #f0f8ff;
     margin: 20px 0px;
 }
@@ -89,7 +86,7 @@ body {
 .search-input {
     flex: auto;
     padding: 10px 15px;
-    border: 1px solid #ccc;
+    border: 1px solid var(--lines-color);
     border-radius: 10px;
     font-size: 1em;
     margin-right: 5px;
@@ -102,12 +99,13 @@ body {
 .sort-filter {
     display: flex;
     align-items: center;
+    justify-content: space-between;
     gap: 10px;
 }
 
 .dropdown {
     padding: 10px;
-    border: 1px solid #ccc;
+    border: 1px solid var(--lines-color);
     border-radius: 5px;
     font-size: 1em;
 }
@@ -177,7 +175,7 @@ body {
         align-items: stretch;
     }
     .icon {
-        width: 35px;
-        height: 35px;
+        width: 25px;
+        height: 25px;
     }
   }
