--- a/variables.css
+++ b/variables.css
@@ -8,11 +8,11 @@
 	--body-text: #333333;
 	--heart-color: #DC143C;
 	/* dark mode colors */
-	--brand-primary-dark: #0768AC;
+	/* --brand-primary-dark: #0768AC;
 	--brand-secondary-dark: #03C180;
 	--bg_default-dark: #1A1A1A;
 	--bg_body-dark: #282828;
 	--lines-color: #000000;
-	--body-text-dark :#EDEDED;
+	--body-text-dark :#EDEDED; */
 }
 
